--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,7 @@
 
 
 body {
- font-family: Arial, Helvetica, sans-serif; 
-  color: black;
+font-family: HelvLight;  color: black;
    text-align: justify;
   line-height: 1.5; 
     font-weight: 500;
@@ -25,7 +24,7 @@ padding-top: 10px;}
 
   
   .cop { font-size: 14px;
-   font-family: Arial, Helvetica, sans-serif;
+font-family: HelvLight;
     padding: 15px;
          text-align: justify;
          line-height: 1.5; 
@@ -35,7 +34,8 @@ padding-top: 10px;}
 h1 { text-align: center;
 font-size: 20px;
 padding-top: 25px;
-font-family: Arial, Helvetica, sans-serif;font-weight: bold;
+font-family: HelvLight;
+    font-weight: bold;
 }
 
 .sharon { padding: 20px;
@@ -179,8 +179,8 @@ font-family: Arial, Helvetica, sans-serif;font-weight: bold;
 .navbar {
   z-index: 1;
     
-    font-family: 'Manrope', sans-serif;
-    font-size: 16px;
+font-family: HelvLight;
+ font-size: 16px;
     font-weight: 500;
     display: flex;
     justify-content: space-between;
