--- a/style.css
+++ b/style.css
@@ -127,6 +127,7 @@ left: 13px;
 
 .carousel-swipe-right {
 right: 13px;
+z-index: 0;
 }
 
 .carousel-control-prev-icon,
@@ -673,51 +674,12 @@ padding: 20px;
 
 
 
-.dropdown {
-position: relative;
-display: inline-block;
-}
 
-.dropdown-toggle {
-background-color: #Ab5943;
-color: white;
-padding: 10px 20px;
-border: none;
-border-radius: 5px;
-cursor: pointer;
-border-radius: 50px;
-}
 
-.dropdown-toggle:hover {
-background-color: #8f4d38;
-}
 
-.dropdown-menu {
-display: none;
-position: absolute;
-background-color: white;
-box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
-z-index: 1;
-min-width: 250px;
-padding: 10px;
-border-radius: 5px;
-margin-top: 10px;
-}
 
-.dropdown-menu li {
-list-style: none;
-margin: 10px 0;
-}
 
-.dropdown-menu hr {
-margin: 5px 0;
-border: 0;
-border-top: 1px solid #ccc;
-}
 
-.dropdown-item-text {
-color: #333;
-}
 
 
 
@@ -967,39 +929,6 @@ background-color: gold;
 }
 
 
-.dropdown-toggle:hover {
-background-color: gold; 
-}
-
-
-.hidden-dropdown {
-display: none;
-}
-
-.visible-dropdown {
-display: block;
-position: absolute;
-top: 100%; 
-left: 0;
-z-index: 3;
-padding: 10px;
-background-color: white;
-border: 1px solid #ccc;
-border-radius: 4px;
-width: 270px;
-height: auto; 
-max-height: auto; 
-box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-white-space: normal; 
-}
-
-.placeholder-content {
-white-space: normal; 
-}
-
-
-
-
 
 
 
@@ -1024,113 +953,7 @@ text-align: center;
 
 
 
-
-
-
-  /* Navbar styles */
-  .navbar {
-font-family: Arial, Helvetica, sans-serif;
-    font-size: 16px;
-    font-weight: 400;
-padding-top: 0 !important;
-padding-bottom: 0px;
-    z-index: 3;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: black,
-    padding-left: 25px;
-    padding-right: 25px;
-  }
-
-  .navbar img {
-    padding-left: 10px;
-    max-width: 230px;
-    height: 130px;
-  }
-
-  .nav-list {
-    z-index: 3;
-    letter-spacing:0.6px;
-    font-weight: 500;        display: flex;
-    list-style: none;
-    margin: 0;
   
-    padding: 0;
-  }
-
-  .nav-list li {
-    z-index: 3;
-    margin-right: 10px;
-  }
-
-  .nav-list a {
-    z-index: 3;
-    color: black;
-    text-decoration: none;
-    padding: 10px;
-    display: block;
-    transition: background-color 0.3s ease;
-  }
-
-  .nav-list a:hover {
-    background-color: #D6A295;
-  }
-
-  .menu-button {
-    display: none;
-    font-size: 35px;
-    color: #Ab5943; /* Font color black */
-    background: none;
-    border: none;
-    cursor: pointer;
-  }
-
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    right: 10px;
-    top: 60px;
-    background-color: white;
-    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-  }
-
-  .dropdown-content a {
-      z-index: 3;
-    color: black; 
-    padding: 10px 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
-
-  .dropdown-content a:hover {
-    background-color: #D6A295;
-  }
-
-  /* Responsive styles */
-  @media (max-width: 800px) {
-    .nav-list {
-      z-index: 3;
-      display: none;
-    }
-    .menu-button {
-      display: block;
-    }
-  }
-
-  @media (max-width: 800px), (hover: none) {
-    .dropdown-content.show {
-      display: block;
-    }
-  }
-
-
-
-
-
-
-
 .elijah-container {
 justify-content: center;
 text-align: center;
@@ -1165,72 +988,189 @@ padding-bottom: 0px;
 
 
 
-.dropbtn {
-background-color: white;
-color: black;
-padding: 16px;
-font-size: 16px;
-border: none;
-cursor: pointer;
+
+
+
+
+
+
+
+
+
+.elephant-nav-list a {
+  text-decoration: none;
+  color: #000;
+  font-weight: bold;
+  position: relative; /* Added position relative for hover effect */
 }
 
-.dropdown {
-position: relative;
-display: inline-block;
+.elephant-nav-list a::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: -2px;
+  left: 0;
+  background-color: #Ab5943;
+  visibility: hidden;
+  transform: scaleX(0);
+  transition: all 0.3s ease-in-out;
 }
 
-
-.dropdown-content {
-width: 200px;
-display: none;
-position: absolute;
-right: 10px;
-top: 30px;
-background-color: white;
-box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
-z-index: 1;
+.elephant-nav-list a:hover::after {
+  visibility: visible;
+  transform: scaleX(1);
 }
 
-.dropdown-content a {
-color: black;
-padding: 12px 16px;
-text-decoration: none;
-display: block;
+/* Add right spacing of 25px to the dropdown content */
+.elephant-menu-content {
+  right: 25px;
 }
 
-.dropdown-content a:hover {background-color: #AB5943}
-
-.dropdown:hover .dropdown-content {
-display: block;
+.elephant-navbar {
+  z-index: 999;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-right: 35px;
+  padding-left: 20px;
+  background-color: #fff;
 }
-
-.dropdown:hover .dropbtn {
-background-color: white;
+.elephant-nav-list {
+  z-index: 999;
+  list-style: none;
+  display: flex;
+  gap: 30px;
+  padding: 0;
+  margin: 0;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@keyframes fadeIn {
-  from { opacity: 0; }
-  to { opacity: 4; }
+.elephant-nav-list li {
+  display: inline;
 }
-
-.word {
-  letter-spacing: normal;
+.elephant-nav-list a {
+  text-decoration: none;
+  color: #000;
+  font-weight: bold;
+  line-height: 20px;
+  position: relative; /* Added position relative for hover effect */
+}
+.elephant-nav-list a::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: -2px;
+  left: 0;
+  background-color: #Ab5943;
+  visibility: hidden;
+  transform: scaleX(0);
+  transition: all 0.3s ease-in-out;
+}
+.elephant-nav-list a:hover::after {
+  visibility: visible;
+  transform: scaleX(1);
+}
+.elephant-dropdown {
+  position: relative;
   display: inline-block;
-  opacity: 0;
-  animation: fadeIn 3s forwards;
-  margin-right: 15px; /* space after each word */
+}
+.elephant-dropdown-content {
+  width: 200px;
+  display: none;
+  position: absolute;
+  right: 0;
+  top: 17px;
+  background-color: white;
+  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+.elephant-dropdown-content a {
+  z-index: 3;
+  color: black;
+  padding: 10px 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+.elephant-dropdown-content a:hover {
+  background-color: #f1f1f1;
+}
+.elephant-dropdown:hover .elephant-dropdown-content {
+  display: block;
+}
+.elephant-menu-button {
+  display: none;
+  background: none;
+  border: none;
+  font-size: 35px;
+  color: #Ab5943;
+  cursor: pointer;
+}
+@media (max-width: 800px) {
+  .elephant-nav-list {
+    z-index: 999;
+    display: none;
+    flex-direction: column;
+    width: auto;
+    position: absolute;
+    top: 60px; /* Adjust according to your navbar height */
+    right: 0;
+    background-color: #fff;
+    box-shadow: 0 8px 16px rgba(54, 36, 36, 0.2);
+    height: auto;
+  }
+  .elephant-nav-list.show {
+    display: flex;
+  }
+  .elephant-menu-button {
+    display: block;
+  }
+}
+.elephant-navbar img {
+  max-width: 250px;
+  max-height: 150px;
+}
+.elephant-dropdown:hover .elephant-dropdown-content {
+  display: block;
+}
+.elephant-dropdown:hover .elephant-dropbtn {
+  background-color: white;
+}
+.elephant-dropbtn {
+  background-color: white;
+  color: black;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+.elephant-dropdown {
+  position: relative;
+  display: inline-block;
+}
+.elephant-dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+.elephant-dropdown-content a {
+  color: black;
+  z-index: 999;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+.elephant-dropdown-content a:hover {
+  background-color: #AB5943;
+}
+.elephant-dropdown:hover .elephant-dropdown-content {
+  display: block;
+}
+.elephant-dropdown:hover .elephant-dropbtn {
+  background-color: white;
+}
+/* Add right spacing of 25px to the dropdown content */
+.elephant-menu-content {
+  right: 25px;
 }
