--- a/styles.css
+++ b/styles.css
@@ -19,8 +19,11 @@ body {
     padding-right: 20px;
   padding-top: 10px;}
     
-    .davido { padding: 30px;}
+    .davido { padding-left: 35px;
+    padding-right: 35px;
+  padding-top: 30px;}
   
+
   
     
     .cop { font-size: 14px;
